--- a/home.html
+++ b/home.html
@@ -2,4 +2,8 @@
         <h3>W3 School links</h3>  
         <a href = "https://www.w3schools.com/html/html_headings.asp">Headings/</a>         
         <a href = "https://www.w3schools.com/html/html_formatting.asp">Formatting text/</a>
-        <a href = "https://www.w3schools.com/html/html_lists.asp">Lists</a
+        <a href = "https://www.w3schools.com/html/html_lists.asp">Lists</a>
+
+        <h3>My Website's Pages</h3>
+        <a href = "https://saharsh1234567890.github.io/Saharsh.io/lists.html">Lists/</a>         
+        <a href = "https://saharsh1234567890.github.io/Saharsh.io/formatting.html">Formatting text and Headings</a>
