--- a/lists.html
+++ b/lists.html
@@ -1,4 +1,6 @@
-        <h3>Lists</h3>
+<a href="https://saharsh1234567890.github.io/Saharsh.io/home.html">Go to Home</a>     
+
+<h3>Lists</h3>
             <ul>
             <li>List</li>
             <ol>
