--- a/formatting.html
+++ b/formatting.html
@@ -1,4 +1,6 @@
-       <li><u>Formatting</u></li>
+<a href="https://saharsh1234567890.github.io/Saharsh.io/home.html">Go to Home</a>        
+
+<li><u>Formatting</u></li>
           <dl>
            <dt>
             <dd><b><u>Table</u></b>       
