--- a/formatting.html
+++ b/formatting.html
@@ -1,4 +1,4 @@
-<a href="https://saharsh1234567890.github.io/Saharsh.io/home.html">Go to Home</a>        
+<a href="https://saharsh1234567890.github.io/Saharsh.io/home.html"></a>       
 
 <li><u>Formatting</u></li>
           <dl>
