--- a/formatting.html
+++ b/formatting.html
@@ -1,4 +1,5 @@
-<a href="https://saharsh1234567890.github.io/Saharsh.io/home.html"></a>       
+<a href="https://saharsh1234567890.github.io/Saharsh.io/home.html">Go to home
+</a>       
 
 <li><u>Formatting</u></li>
           <dl>
