--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-       
+        <body style="Red">
         <h1>My HTML</h1>
         <h3>W3 School links</h3>  
         <a href = "https://www.w3schools.com/html/html_headings.asp">Headings/</a>         
@@ -8,3 +8,4 @@
         <h3>My Website's Pages</h3>
         <a href = "https://saharsh1234567890.github.io/Saharsh.io/lists.html">Lists/</a>         
         <a href = "https://saharsh1234567890.github.io/Saharsh.io/formatting.html">Formatting text and Headings</a>
+        </body>
