--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-        <body background-color ="Red">
+        <body>
         <h1>My HTML</h1>
         <h3>W3 School links</h3>  
         <a href = "https://www.w3schools.com/html/html_headings.asp">Headings/</a>         
