--- a/home.html
+++ b/home.html
@@ -9,3 +9,27 @@
         <a href = "https://saharsh1234567890.github.io/Saharsh.io/lists.html">Lists/</a>         
         <a href = "https://saharsh1234567890.github.io/Saharsh.io/formatting.html">Formatting text and Headings</a>
         </body>
+
+
+        <form>
+        Username:<input type="name" name="name"><br><br>
+        Password::<input type="pasword" name="name"><br><br>
+        Favourite Color:<input type="color" name="color"><br><br>
+        Birthday:<input type="date" name="birthday"><br><br>
+        Image File:<input type="file" name="image"><br><br>
+        Range: 1 <input type="range" name="image"> 10<br><br>
+        Search:<input type="search" name="search"><br><br>
+        Radio Buttons:<br><br>
+        <input type="radio" name="radio1" value="radio1">Option 1<br><br>
+        <input type="radio" name="radio2" value="radio2">Option 2<br><br>
+        <input type="radio" name="radio3" value="radio3">Option 3<br><br>
+        <input type="radio" name="radio4" value="radio4">Option 4<br><br>
+        Checkbox:<br><br>
+        <input type="checkbox" name="checkbox1" value="checkbox1">Option 1<br><br>
+        <input type="checkbox" name="checkbox2" value="checkbox2">Option 2<br><br>
+        <input type="checkbox" name="checkbox3" value="checkbox3">Option 3<br><br>
+        <input type="checkbox" name="checkbox4" value="checkbox4">Option 4<br><br>
+        Submit Search:<input type="submit" name="submit search"><br><br>
+        Submit:<input type="submit" name="submit form"><br><br>
+        </form>
+
