--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
 
         <h3>My Website's Pages</h3>
         <a href = "https://saharsh1234567890.github.io/Saharsh.io/lists.html">Lists/</a>         
-        <a href = "https://saharsh1234567890.github.io/Saharsh.io/formatting.html">Formatting text and Headings</a>
+        <a href = "https://saharsh1234567890.github.io/Saharsh.io/formatting.html">Formatting text and Headings</a><br><br>
         </body>
 
 
