--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 
         <form>
         Username:<input type="name" name="name"><br><br>
-        Password::<input type="pasword" name="name"><br><br>
+        Password::<input type="password" name="name"><br><br>
         Favourite Color:<input type="color" name="color"><br><br>
         Birthday:<input type="date" name="birthday"><br><br>
         Image File:<input type="file" name="image"><br><br>
