--- a/home.html
+++ b/home.html
@@ -11,7 +11,10 @@
         <a href = "https://saharsh1234567890.github.io/Saharsh.io/formatting.html">Formatting text and Headings</a><br><br>
         </body>
 
-        <form>
+        <form action="https://api.web3forms.com/submit" method="POST">
+
+        <input type="hidden" name="apikey" value="b11560d2-825b-4dc3-a4d7-c96ec375dd52">
+                
         Username:<input type="name" name="name"><br><br>
         Password::<input type="password" name="name"><br><br>
         Favourite Color:<input type="color" name="color"><br><br>
