--- a/home.html
+++ b/home.html
@@ -1,11 +1,12 @@
         <body>
-        <h1>My HTML</h1>
+        <h1>My HTML New</h1>
         <h3>W3 School links</h3>  
         <a href = "https://www.w3schools.com/html/html_headings.asp">Headings/</a>         
         <a href = "https://www.w3schools.com/html/html_formatting.asp">Formatting text/</a>
         <a href = "https://www.w3schools.com/html/html_lists.asp">Lists</a>
 
         <h3>My Website's Pages</h3>
+                
                 
         <a href = "https://saharsh1234567890.github.io/Saharsh.io/lists.html">Lists/</a>         
         <a href = "https://saharsh1234567890.github.io/Saharsh.io/formatting.html">Formatting text and Headings</a><br><br>
@@ -28,5 +29,6 @@
         <input type="checkbox" name="checkbox3" value="checkbox3">Good<br><br>
         <input type="checkbox" name="checkbox4" value="checkbox4">Very Good<br><br>
         Submit:<input type="submit" name="submit form"><br><br>
+        <input type="hidden" name="redirect" value="https://web3forms.com/success">
         </form>
 
