--- a/home.html
+++ b/home.html
@@ -20,5 +20,6 @@
         Password::<input type="password" name="name"><br><br>
 
         <input type="hidden" name="redirect" value="https://web3forms.com/success">
+        <button type="submit">Submit Form</button>
         </form>
 
