--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
         <body>
-        <h1>My HTML New</h1>
+        <h1>My HTML New 1</h1>
         <h3>W3 School links</h3>  
         <a href = "https://www.w3schools.com/html/html_headings.asp">Headings/</a>         
         <a href = "https://www.w3schools.com/html/html_formatting.asp">Formatting text/</a>
@@ -12,14 +12,16 @@
         <a href = "https://saharsh1234567890.github.io/Saharsh.io/formatting.html">Formatting text and Headings</a><br><br>
         </body>
 
-        <form action="https://api.web3forms.com/submit" method="POST">
+<form action="https://api.web3forms.com/submit" method="POST">
 
-        <input type="hidden" name="apikey" value="b11560d2-825b-4dc3-a4d7-c96ec375dd52">
-                
-        Username:<input type="name" name="name"><br><br>
-        Password::<input type="password" name="name"><br><br>
+    <input type="hidden" name="apikey" value="b11560d2-825b-4dc3-a4d7-c96ec375dd52">
 
-        <input type="hidden" name="redirect" value="https://web3forms.com/success">
-        <button type="submit">Submit Form</button>
-        </form>
+    <input type="text" name="name" required>
+    <input type="email" name="email" required>
+    <textarea name="message" required></textarea>
+    <input type="hidden" name="redirect" value="https://web3forms.com/success">
+    
+    <button type="submit">Submit Form</button>
+
+</form>
 
