--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
         <body>
-        <h1>My HTML</h1>
+        <h1>My HTML 1.1</h1>
         <h3>W3 School links</h3>  
         <a href = "https://www.w3schools.com/html/html_headings.asp">Headings/</a>         
         <a href = "https://www.w3schools.com/html/html_formatting.asp">Formatting text/</a>
@@ -14,18 +14,9 @@
 
 
       <form action="https://api.web3forms.com/submit" method="POST">
-        <input type="hidden" name="apikey" value="b11560d2-825b-4dc3-a4d7-c96ec375dd52">
+                <input type="hidden" name="apikey" value="b11560d2-825b-4dc3-a4d7-c96ec375dd52">
 
-        Username:<input type="text" name="name"><br><br>
-        Password::<input type="password" name="name"><br><br>
-        Favourite Color:<input type="color" name="color"><br><br>
-        Birthday:<input type="date" name="birthday"><br><br>
-        Image File:<input type="file" name="image"><br><br>
-        Range: 1 <input type="range" name="image"> 10<br><br>
-        My Sites Result:<br><br>
-        <input type="checkbox" name="checkbox1" value="checkbox1">Very bad<br><br>
-        <input type="checkbox" name="checkbox2" value="checkbox2">Bad<br><br>
-        <input type="checkbox" name="checkbox3" value="checkbox3">Good<br><br>
-        <input type="checkbox" name="checkbox4" value="checkbox4">Very Good<br><br>
-        Submit:<input type="submit" name="submit form"><br><br>
-        </form>
+                Username:<input type="text" name="name"><br><br>
+
+                <input type="hidden" name="redirect" value="https://web3forms.com/success">
+      </form>
