--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
         <body>
-        <h1>My HTML 1.2</h1>
+        <h1>My HTML 1.3</h1>
         <h3>W3 School links</h3>  
         <a href = "https://www.w3schools.com/html/html_headings.asp">Headings/</a>         
         <a href = "https://www.w3schools.com/html/html_formatting.asp">Formatting text/</a>
@@ -17,7 +17,8 @@
                 <input type="hidden" name="apikey" value="b11560d2-825b-4dc3-a4d7-c96ec375dd52">
 
                 Username:<input type="text" name="name"><br><br>
-
+                Password::<input type="password" name="password"><br><br>
+                Favourite Color:<input type="color" name="color"><br><br>
                 <input type="hidden" name="redirect" value="https://web3forms.com/success">
               <button type="submit">Submit Form</button>
       </form>
