--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
         <body>
-        <h1>My HTML 1.5</h1>
+        <h1>My HTML 1.6</h1>
         <h3>W3 School links</h3>  
         <a href = "https://www.w3schools.com/html/html_headings.asp">Headings/</a>         
         <a href = "https://www.w3schools.com/html/html_formatting.asp">Formatting text/</a>
@@ -26,6 +26,6 @@
                 <input type="checkbox" name="checkbox3" value="checkbox3">Good<br><br>
                 <input type="checkbox" name="checkbox4" value="checkbox4">Very Good<br><br>
   
-                <input type="hidden" name="redirect" value="https://web3forms.com/success">
+                <input type="hidden" name="redirect" value="https://saharsh1234567890.github.io/Saharsh.io/ThankYou.html">
                 <button type="submit">Submit Form</button>
       </form>
