--- a/ThankYou.html
+++ b/ThankYou.html
@@ -1,1 +1,3 @@
-Thankyou dot html
+
+Thankyou. Your form has been submitted successfully today and one of our representatives will get back to you shortly!!
+
