--- a/ThankYou.html
+++ b/ThankYou.html
@@ -1,3 +1,2 @@
 
-Thankyou. Your form has been submitted successfully today and one of our representatives will get back to you shortly!!
-
+<h1 align="center">Thankyou. Your form has been submitted successfully!!</h1>
