--- a/ThankYou.html
+++ b/ThankYou.html
@@ -1,3 +1,3 @@
 
 <h1 align="center">Thankyou. Your form has been submitted successfully!!</h1>
-<img src="https://i.pinimg.com/originals/7b/dd/1b/7bdd1bc7db7fd48025d4e39a0e2f0fd8.jpg">
+<img align="center" width="200px" height="200px" src="https://i.pinimg.com/originals/7b/dd/1b/7bdd1bc7db7fd48025d4e39a0e2f0fd8.jpg">
