--- a/ThankYou.html
+++ b/ThankYou.html
@@ -1,3 +1,10 @@
+<style>
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+</style>
 
-<h1 align="center">Thankyou. Your form has been submitted successfully!!</h1>
-<img class="center" width="200px" height="200px" src="https://i.pinimg.com/originals/7b/dd/1b/7bdd1bc7db7fd48025d4e39a0e2f0fd8.jpg">
+<h1 align="center">Thankyou!! Your form has been submitted successfully.</h1>
+<img width="200px" height="200px" src="https://i.pinimg.com/originals/7b/dd/1b/7bdd1bc7db7fd48025d4e39a0e2f0fd8.jpg">
