--- a/formatting.html
+++ b/formatting.html
@@ -1,3 +1,4 @@
+<body style ="color:red; background-color:orange; font-family:Brush Script MT;">
 <a href="https://saharsh1234567890.github.io/Saharsh.io/home.html">Go to home
 </a>       
 
@@ -31,4 +32,5 @@
 
             </dl>
            </dt>
-          </dd>  
+          </dd> 
+</body> 
