--- a/lists.html
+++ b/lists.html
@@ -1,3 +1,4 @@
+<body style ="color:red; background-color:orange; font-family:Brush Script MT;">
 <a href="https://saharsh1234567890.github.io/Saharsh.io/home.html">Go to Home</a>     
 
 <h3>Lists</h3>
