--- a/ThankYou.html
+++ b/ThankYou.html
@@ -1,4 +1,4 @@
-<body style ="color:red; background-color:orange; font-family:Brush Script MT;">
+<body style ="color:red; background-color:orange; font-family:Brush Script MT;"><br>
 <style>
 img {
   display: block;
