--- a/ThankYou.html
+++ b/ThankYou.html
@@ -1,3 +1,4 @@
+<a href="https://saharsh1234567890.github.io/Saharsh.io/home.html">Go to home</a>
 <body style ="color:red; background-color:orange; font-family:Brush Script MT;"><br>
 <style>
 img {
