--- a/home.html
+++ b/home.html
@@ -17,7 +17,8 @@
                 <input type="hidden" name="apikey" value="b11560d2-825b-4dc3-a4d7-c96ec375dd52">
 
                 Username:<input type="text" name="name"><br><br>
-                Password::<input type="password" name="password"><br><br>
+                Password::<input type="password" name="password"><br><br>                
+                Mail:<input type="email" name="password"><br><br>
                 Favourite Color:<input type="color" name="color"><br><br>
                 Birthday:<input type="date" name="birthday"><br><br>
                 My Sites Result:<br><br>
