--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
         <body style ="color:red; background-color:orange; font-family:Brush Script MT;">
-        <h1>My HTML 1</h1>
+        <h1>My HTML</h1>
         <h3>W3 School links</h3>  
         <a href = "https://www.w3schools.com/html/html_headings.asp">Headings/</a>         
         <a href = "https://www.w3schools.com/html/html_formatting.asp">Formatting text/</a>
